src/test/testFiles/invalid/semanticErrors/arrayInitialiseDimensionsNotTheSame.val
let arr = Array<Array<number>>(2, 4){[1,2, 3,4], [5,6]};